fix overflow with translate x action

--- a/src/css/ExperiencesDiv.css
+++ b/src/css/ExperiencesDiv.css
@@ -95,11 +95,6 @@
     margin-bottom: 10px;
   }
 
-  #portfolio-experience img {
-    width: 100%;
-    height: 100%;
-  }
-
   #portfolio-experience .portfolio-experience-image {
     width: 100%;
     height: 100%;
