--- a/src/css/PortfolioPage.css
+++ b/src/css/PortfolioPage.css
@@ -176,6 +176,10 @@ footer {
     right: 20px;
   }
 
+  .portfolio-experiences {
+    overflow: hidden;
+  }
+
   footer {
     font-size: 12px;
   }
